Add french version of site

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="twoColumn-item">
                 <h2>About Me</h2>
                 <p> I am a web developer specialized in the creation of web applications. I have a passion for discovering new technologies and techniques. As a result, I am a versatile programmer with knowledge of a diverse repertoire of tools and languages.  </p>
-                <p> I can also help you design your personal or business website. I have created websites using a variety of frameworks and content management systems including Bootstrap and Wordpress.  </p>
+                <p> I can also help you design your personal or business website. I will use the framework or CMS of your choice in order to create a look that is professional and unique. I can also adapt page styles to fit your corporate style guide to ensure a coherent presentation across your site.</p>
                 <p> I am based in Paris and I am able to work on location or from my home. I love collaborative projects and I can easily adapt my workflow to fit your team's methodology.  </p>
             </div>
         </div>
@@ -59,7 +59,7 @@
 
                 <div class="pulldownParent" onclick="toggleDisplay(this)">
                     <h3>Application development</h3>
-                    <div class="pulldownDiv">I can create applications or video games and deploy them in a variety of formats (iOS, Android, WebGL)
+                    <div class="pulldownDiv">I can create applications or video games and deploy them in a variety of formats (iOS, Android, WebGL).
                         <ul>
                             <li>Javascript</li> 
                             <li>C#</li>
@@ -81,11 +81,6 @@
                     <h3>Writing and Translation</h3>
                     <div class="pulldownDiv">I have a good sense for summarizing complex information and presenting it to non-experts. I can also translate your documents from French to English.</div>
                 </div>
-
-                <!-- <div class="pulldownParent" onclick="toggleDisplay(this)"> -->
-                <!--     <h3>Linux / Vim / Git</h3> -->
-                <!--     <div class="pulldownDiv">I am comfortable working in a Linux command-line environment.</div> -->
-                <!-- </div> -->
 
             </div>
             <div class="twoColumn-item">
@@ -124,7 +119,7 @@
 
                 <div class="pulldownParent" onclick="toggleDisplay(this)">
                     <h3>Version Tracking</h3>
-                    <div class="pulldownDiv">I can use versioning software to collaborate easily with coworkers.
+                    <div class="pulldownDiv">I can use versioning software to collaborate easily with others.
                         <ul>
                             <li>Git</li>
                         </ul>
@@ -158,8 +153,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="parallax" class="parallax"></div> -->
 
     <script src="./js/main.js"></script>
     
